@@ -49,7 +49,7 @@ class ExclusionMistakeException extends RuntimeException {
 }
 
 /**
- * This class helps managing and exporting results for each brain region. It works closely with ABBA's QuPath extension.
+ * This class helps to manage and exporting results for each brain region. It works closely with ABBA's QuPath extension.
  */
 public class AtlasManager {
     public final static String um = GeneralTools.micrometerSymbol();
@@ -132,7 +132,7 @@ public class AtlasManager {
         List<PathObject> atlases = AtlasManager.search(atlasName, hierarchy);
         if (atlases.isEmpty())
             throw new ImportedAtlasNotFound();
-        this.atlasObject = atlases.get(0);
+        this.atlasObject = atlases.getFirst();
         if (this.atlasObject.getChildObjects().isEmpty())
             throw new DisruptedAtlasHierarchy(this.atlasObject);
         if (atlases.size()>1)
@@ -222,6 +222,7 @@ public class AtlasManager {
 
         ProjectImageEntry<BufferedImage> entry = QP.getProjectEntry();
 
+        assert entry != null;
         String rawImageName = entry.getImageName();
         double numericValue;
 
@@ -231,10 +232,10 @@ public class AtlasManager {
             results.addValue("Image Name", rawImageName);
 
             // Check if image has associated metadata and add it as columns
-            if (!entry.getMetadataKeys().isEmpty()) {
-                Collection<String> keys = entry.getMetadataKeys();
-                for (String key : keys) {
-                    results.addValue("Metadata_" + key, entry.getMetadataValue(key));
+            if (!entry.getMetadata().isEmpty()) {
+                Map<String, String> metadata = entry.getMetadata();
+                for(String key: metadata.keySet()) {
+                    results.addValue("Metadata_" + key, metadata.get(key));
                 }
             }
 
